fix codearea --moblie-opt"

--- a/index.html
+++ b/index.html
@@ -444,6 +444,9 @@
             grid-template-columns: 1fr;
             max-width: 400px;
         }
+        #code-2 {
+        padding-left: 0rem;
+        }
     }
 
     .cards-about div {
