mini-upd index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="description" content="Portfolio about developer networker002">
+    <meta name="keywords" content="programming web webapp development program job portfolio python html css javascript">
+    <meta property="og:title" content="Portfolio | networker002">
+    <meta property="og:description" content="Beginner developer">
     <title>Welcome to NetWorkErrSpace! | Main</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap">
