--- a/index.html
+++ b/index.html
@@ -1036,13 +1036,13 @@
         <h1>About me</h1>
         <p>I am motivated and detail-oriented <b>developer</b>. I started coding several years ago and still don't stop. Anyway, I read a lot of <i>books about programming and IT</i>, so my outlook is good.</p>
         <p>Currently pursuing a degree in <b>Information Systems and Programming</b>.</p> <span style="opacity: .5;">< dev / ></span>
-        <p>I beleve in writing code that not only works but is also maintainable and scalable.</p>
+        <p>I believe in writing code that not only works but is also maintainable and scalable.</p>
         <p><ul id="about-ht">
             <li>programming</li>
             <li>code</li>
             <li>service</li>
             <li>fullstack</li>
-            <li>begginer</li>
+            <li>beginner</li>
         </ul></p>
 
 <div class="cards-about">
