--- a/index.html
+++ b/index.html
@@ -1148,8 +1148,8 @@
     <div class="contact" id="contact">
         <h1>Contact me</h1>
         <div>
-            <div class="ct-t"><i class="fa-brands fa-github"></i>GitHub</div>
-            <div class="ct-t"><i class="fa-brands fa-telegram"></i>Telegram</div>
+            <div class="ct-t" onclick='location.assign("https://github.com/networker002")'><i class="fa-brands fa-github"></i>GitHub</div>
+            <div class="ct-t" onclick='location.assign("https://t.me/boostlearn_support")'><i class="fa-brands fa-telegram"></i>Telegram</div>
             <div class="ct-t"><i class="fa-solid fa-envelope"></i>Email</div>
         </div>
         <section>
